--- a/.github/workflows/generate-sbom.yml
+++ b/.github/workflows/generate-sbom.yml
@@ -48,7 +48,7 @@ jobs:
 
     # Step 4: Submit SBOM (optional)
     - name: SBOM upload
-      uses: advanced-security/spdx-dependency-submission-action@5d6e7f8a9b0c1d2e3f4a5b6c7d8e9f0a1b2c3d4e
+      uses: advanced-security/spdx-dependency-submission-action@v0.1.1
       with:
         filePath: |
           ./Portal/_sbom_output/sbom.json
