--- a/.github/workflows/build-test2.yml
+++ b/.github/workflows/build-test2.yml
@@ -10,9 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
+      # Step 1: Checkout the repository with full history to get the commits we need
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       # Step 2: Get list of changed files as JSON
       - name: Get list of changed files as JSON
