--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -1,9 +1,9 @@
-name: Pull Request Workflow
+name: Pull Request Build Workflow
 
 on:
   pull_request:
     branches:
-      - '**'
+      - 'develop'
 
 jobs:
   build:
