--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -1,12 +1,12 @@
-name: Pull Request Build Workflow
+name: Pull Request Workflow
 
 on:
   pull_request:
     branches:
-      - 'develop'
+      - '**'
 
 jobs:
-  build:
+  prep:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,11 +31,19 @@ jobs:
           echo "Changed files:"
           echo "$FILES_JSON" | jq -r '.[]'
 
-      # Step 4: Find, build, and test changed projects
-      - name: Find, build, and test changed projects
+  build:
+    runs-on: ubuntu-latest
+    needs: prep
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Step 4: Find and build changed projects
+      - name: Find and build changed projects
         if: steps.get_files.outputs.files != '[]'
         run: |
-          FILES_JSON='${{ steps.get_files.outputs.files }}'
+          FILES_JSON='${{ needs.prep.outputs.files }}'
           PROJECTS_TO_BUILD=()
 
           # Check if any files in the specified directories have changed
@@ -53,7 +61,7 @@ jobs:
             echo "No projects need to be built. Skipping build step."
             exit 0
           else
-            echo "The following projects will be built and tested:"
+            echo "The following projects will be built:"
             for PROJECT in "${PROJECTS_TO_BUILD[@]}"; do
               echo " - $PROJECT"
             done
@@ -61,8 +69,6 @@ jobs:
               echo "Restoring dependencies for project: $PROJECT"
               dotnet restore "$PROJECT"
               echo "Building project: $PROJECT"
-              dotnet build "$PROJECT"
-              echo "Running tests for project: $PROJECT"
-              dotnet test "$PROJECT"
+              dotnet build "$PROJECT" /warnaserror:none
             done
           fi
