--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -22,13 +22,13 @@ jobs:
         run: |
           FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
           JSON_FILES=$(echo "$FILES" | jq -R -s -c 'split("\n")[:-1]')
-          echo "::set-output name=files::$JSON_FILES"
+          echo "files=$JSON_FILES" >> $GITHUB_OUTPUT
 
       # Step 3: Set boolean flags for changes in specific directories
       - name: Set directory change flags
         id: set_flags
         run: |
-          FILES_JSON='${{ steps.get_files.outputs.files }}'
+          FILES_JSON='${{ env.files }}'
           PORTAL_CHANGED=false
           RESOURCEPROVISIONER_CHANGED=false
           SERVERLESSOPERATIONS_CHANGED=false
@@ -43,9 +43,9 @@ jobs:
             fi
           done
 
-          echo "::set-output name=portal_changed::$PORTAL_CHANGED"
-          echo "::set-output name=resourceprovisioner_changed::$RESOURCEPROVISIONER_CHANGED"
-          echo "::set-output name=serverlessoperations_changed::$SERVERLESSOPERATIONS_CHANGED"
+          echo "portal_changed=$PORTAL_CHANGED" >> $GITHUB_OUTPUT
+          echo "resourceprovisioner_changed=$RESOURCEPROVISIONER_CHANGED" >> $GITHUB_OUTPUT
+          echo "serverlessoperations_changed=$SERVERLESSOPERATIONS_CHANGED" >> $GITHUB_OUTPUT
 
       # Step 4: List all changed files
       - name: List all changed files
