--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
           JSON_FILES=$(echo "$FILES" | jq -R -s -c 'split("\n")[:-1]')
-          echo "files=$JSON_FILES" >> $GITHUB_OUTPUT
+          echo "::set-output name=files::$JSON_FILES"
 
       # Step 3: Set boolean flags for changes in specific directories
       - name: Set directory change flags
@@ -43,9 +43,9 @@ jobs:
             fi
           done
 
-          echo "portal_changed=$PORTAL_CHANGED" >> $GITHUB_OUTPUT
-          echo "resourceprovisioner_changed=$RESOURCEPROVISIONER_CHANGED" >> $GITHUB_OUTPUT
-          echo "serverlessoperations_changed=$SERVERLESSOPERATIONS_CHANGED" >> $GITHUB_OUTPUT
+          echo "::set-output name=portal_changed::$PORTAL_CHANGED"
+          echo "::set-output name=resourceprovisioner_changed::$RESOURCEPROVISIONER_CHANGED"
+          echo "::set-output name=serverlessoperations_changed::$SERVERLESSOPERATIONS_CHANGED"
 
       # Step 4: List all changed files
       - name: List all changed files
@@ -68,7 +68,7 @@ jobs:
       - name: Find and build changed projects
         if: steps.get_files.outputs.files != '[]'
         run: |
-          FILES_JSON='${{ steps.get_files.outputs.files }}'
+          FILES_JSON='${{ needs.prep.outputs.files }}'
           PROJECTS_TO_BUILD=()
 
           # Check if any files in the specified directories have changed
