--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
           JSON_FILES=$(echo "$FILES" | jq -R -s -c 'split("\n")[:-1]')
-          echo "::set-output name=files::$JSON_FILES"
+          echo "files=$JSON_FILES" >> $GITHUB_OUTPUT
 
       # Step 3: Set boolean flags for changes in specific directories
       - name: Set directory change flags
@@ -43,9 +43,9 @@ jobs:
             fi
           done
 
-          echo "::set-output name=portal_changed::$PORTAL_CHANGED"
-          echo "::set-output name=resourceprovisioner_changed::$RESOURCEPROVISIONER_CHANGED"
-          echo "::set-output name=serverlessoperations_changed::$SERVERLESSOPERATIONS_CHANGED"
+          echo "portal_changed=$PORTAL_CHANGED" >> $GITHUB_OUTPUT
+          echo "resourceprovisioner_changed=$RESOURCEPROVISIONER_CHANGED" >> $GITHUB_OUTPUT
+          echo "serverlessoperations_changed=$SERVERLESSOPERATIONS_CHANGED" >> $GITHUB_OUTPUT
 
       # Step 4: List all changed files
       - name: List all changed files
@@ -66,9 +66,9 @@ jobs:
 
       # Step 5: Find and build changed projects
       - name: Find and build changed projects
-        if: steps.get_files.outputs.files != '[]'
+        if: needs.prep.outputs.get_files.files != '[]'
         run: |
-          FILES_JSON='${{ needs.prep.outputs.files }}'
+          FILES_JSON='${{ needs.prep.outputs.get_files.files }}'
           PROJECTS_TO_BUILD=()
 
           # Check if any files in the specified directories have changed
