--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -22,6 +22,8 @@ jobs:
         run: |
           FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
           JSON_FILES=$(echo "$FILES" | jq -R -s -c 'split("\n")[:-1]')
+          echo "Setting files output:"
+          echo "$JSON_FILES"
           echo "files=$JSON_FILES" >> $GITHUB_OUTPUT
 
       # Step 3: Set boolean flags for changes in specific directories
@@ -51,7 +53,7 @@ jobs:
       - name: List all changed files
         run: |
           FILES_JSON='${{ steps.get_files.outputs.files }}'
-          echo "Changed files:"
+          echo "Echoing FILES_JSON in prep step:"
           echo "$FILES_JSON" | jq -r '.[]'
 
   build:
@@ -68,7 +70,10 @@ jobs:
       - name: Find and build changed projects
         if: needs.prep.outputs.get_files.files != '[]'
         run: |
+          echo "Echoing FILES_JSON at the start of build step:"
           FILES_JSON='${{ needs.prep.outputs.get_files.files }}'
+          echo "$FILES_JSON"
+
           PROJECTS_TO_BUILD=()
 
           # Check if any files in the specified directories have changed
