--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -1,4 +1,4 @@
-name: Pull Request Workflow
+name: Pull Request Build Workflow
 
 on:
   pull_request:
@@ -6,11 +6,8 @@ on:
       - 'develop'
 
 jobs:
-  prep:
+  build:
     runs-on: ubuntu-latest
-
-    outputs:
-      files: ${{ steps.get_files.outputs.files }}
 
     steps:
       # Step 1: Checkout the repository with full history to get the commits we need
@@ -25,55 +22,19 @@ jobs:
         run: |
           FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
           JSON_FILES=$(echo "$FILES" | jq -R -s -c 'split("\n")[:-1]')
-          echo "files=$JSON_FILES" >> $GITHUB_OUTPUT
-
-      # Step 3: Set boolean flags for changes in specific directories
-      - name: Set directory change flags
-        id: set_flags
-        run: |
-          FILES_JSON=${{ steps.get_files.outputs.files }}
-          PORTAL_CHANGED=false
-          RESOURCEPROVISIONER_CHANGED=false
-          SERVERLESSOPERATIONS_CHANGED=false
-
-          for FILE in $(echo "$FILES_JSON" | jq -r '.[]'); do
-            if [[ "$FILE" =~ ^Portal/ ]]; then
-              PORTAL_CHANGED=true
-            elif [[ "$FILE" =~ ^ResourceProvisioner/ ]]; then
-              RESOURCEPROVISIONER_CHANGED=true
-            elif [[ "$FILE" =~ ^ServerlessOperations/ ]]; then
-              SERVERLESSOPERATIONS_CHANGED=true
-            fi
-          done
-
-          echo "portal_changed=$PORTAL_CHANGED" >> $GITHUB_OUTPUT
-          echo "resourceprovisioner_changed=$RESOURCEPROVISIONER_CHANGED" >> $GITHUB_OUTPUT
-          echo "serverlessoperations_changed=$SERVERLESSOPERATIONS_CHANGED" >> $GITHUB_OUTPUT
-
-      # Step 4: List all changed files
+          echo "::set-output name=files::$JSON_FILES"
+      # Step 3: List all changed files
       - name: List all changed files
         run: |
-          FILES_JSON=${{ steps.get_files.outputs.files }}
+          FILES_JSON='${{ steps.get_files.outputs.files }}'
           echo "Changed files:"
           echo "$FILES_JSON" | jq -r '.[]'
-
-  build:
-    runs-on: ubuntu-latest
-    needs: prep
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      # Step 5: Find and build changed projects
-      - name: Find and build changed projects
-        if: needs.prep.outputs.files != '[]'
+      # Step 4: Find, build, and test changed projects
+      - name: Find, build, and test changed projects
+        if: steps.get_files.outputs.files != '[]'
         run: |
-          FILES_JSON=${{ needs.prep.outputs.files }}
+          FILES_JSON='${{ steps.get_files.outputs.files }}'
           PROJECTS_TO_BUILD=()
-
           # Check if any files in the specified directories have changed
           for FILE in $(echo "$FILES_JSON" | jq -r '.[]'); do
             if [[ "$FILE" =~ ^(Portal|ResourceProvisioner|ServerlessOperations)/src/([^/]+)/.* ]]; then
@@ -84,12 +45,11 @@ jobs:
               fi
             fi
           done
-
           if [ ${#PROJECTS_TO_BUILD[@]} -eq 0 ]; then
             echo "No projects need to be built. Skipping build step."
             exit 0
           else
-            echo "The following projects will be built:"
+            echo "The following projects will be built and tested:"
             for PROJECT in "${PROJECTS_TO_BUILD[@]}"; do
               echo " - $PROJECT"
             done
@@ -97,6 +57,8 @@ jobs:
               echo "Restoring dependencies for project: $PROJECT"
               dotnet restore "$PROJECT"
               echo "Building project: $PROJECT"
-              dotnet build "$PROJECT" /warnaserror:none
+              dotnet build "$PROJECT"
+              echo "Running tests for project: $PROJECT"
+              dotnet test "$PROJECT"
             done
           fi
