--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -22,13 +22,15 @@ jobs:
         run: |
           FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
           JSON_FILES=$(echo "$FILES" | jq -R -s -c 'split("\n")[:-1]')
-          echo "::set-output name=files::$JSON_FILES"
+          echo "files=$JSON_FILES" >> $GITHUB_OUTPUT
+
       # Step 3: List all changed files
       - name: List all changed files
         run: |
           FILES_JSON='${{ steps.get_files.outputs.files }}'
           echo "Changed files:"
           echo "$FILES_JSON" | jq -r '.[]'
+
       # Step 4: Find, build, and test changed projects
       - name: Find, build, and test changed projects
         if: steps.get_files.outputs.files != '[]'
@@ -58,7 +60,5 @@ jobs:
               dotnet restore "$PROJECT"
               echo "Building project: $PROJECT"
               dotnet build "$PROJECT"
-              echo "Running tests for project: $PROJECT"
-              dotnet test "$PROJECT"
             done
           fi
