--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -6,8 +6,10 @@ on:
       - 'develop'
 
 jobs:
-  build:
+  prep:
     runs-on: ubuntu-latest
+    outputs:
+      files: ${{ steps.get_files.outputs.files }}
 
     steps:
       # Step 1: Checkout the repository with full history to get the commits we need
@@ -24,18 +26,29 @@ jobs:
           JSON_FILES=$(echo "$FILES" | jq -R -s -c 'split("\n")[:-1]')
           echo "files=$JSON_FILES" >> $GITHUB_OUTPUT
 
-      # Step 3: List all changed files
+  build:
+    runs-on: ubuntu-latest
+    needs: prep
+
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # Step 2: List all changed files
       - name: List all changed files
         run: |
-          FILES_JSON='${{ steps.get_files.outputs.files }}'
+          FILES_JSON='${{ needs.prep.outputs.files }}'
           echo "Changed files:"
           echo "$FILES_JSON" | jq -r '.[]'
 
-      # Step 4: Find, build, and test changed projects
+      # Step 3: Find, build, and test changed projects
       - name: Find, build, and test changed projects
-        if: steps.get_files.outputs.files != '[]'
+        if: needs.prep.outputs.files != '[]'
         run: |
-          FILES_JSON='${{ steps.get_files.outputs.files }}'
+          FILES_JSON='${{ needs.prep.outputs.files }}'
           PROJECTS_TO_BUILD=()
           # Check if any files in the specified directories have changed
           for FILE in $(echo "$FILES_JSON" | jq -r '.[]'); do
@@ -60,5 +73,7 @@ jobs:
               dotnet restore "$PROJECT"
               echo "Building project: $PROJECT"
               dotnet build "$PROJECT"
+              echo "Running tests for project: $PROJECT"
+              dotnet test "$PROJECT"
             done
           fi
