--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       files: ${{ steps.get_files.outputs.files }}
+      portal_changed: ${{ steps.get_files.outputs.portal_changed }}
+      resource_provisioner_changed: ${{ steps.get_files.outputs.resource_provisioner_changed }}
+      serverless_operations_changed: ${{ steps.get_files.outputs.serverless_operations_changed }}
 
     steps:
       # Step 1: Checkout the repository with full history to get the commits we need
@@ -18,13 +21,31 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Step 2: Get list of changed files as JSON
+      # Step 2: Get list of changed files as JSON and set booleans for changed directories
       - name: Get list of changed files as JSON
         id: get_files
         run: |
           FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.sha }})
           JSON_FILES=$(echo "$FILES" | jq -R -s -c 'split("\n")[:-1]')
           echo "files=$JSON_FILES" >> $GITHUB_OUTPUT
+
+          PORTAL_CHANGED=false
+          RESOURCE_PROVISIONER_CHANGED=false
+          SERVERLESS_OPERATIONS_CHANGED=false
+
+          for FILE in $FILES; do
+            if [[ "$FILE" =~ ^Portal/ ]]; then
+              PORTAL_CHANGED=true
+            elif [[ "$FILE" =~ ^ResourceProvisioner/ ]]; then
+              RESOURCE_PROVISIONER_CHANGED=true
+            elif [[ "$FILE" =~ ^ServerlessOperations/ ]]; then
+              SERVERLESS_OPERATIONS_CHANGED=true
+            fi
+          done
+
+          echo "portal_changed=$PORTAL_CHANGED" >> $GITHUB_OUTPUT
+          echo "resource_provisioner_changed=$RESOURCE_PROVISIONER_CHANGED" >> $GITHUB_OUTPUT
+          echo "serverless_operations_changed=$SERVERLESS_OPERATIONS_CHANGED" >> $GITHUB_OUTPUT
 
   build:
     runs-on: ubuntu-latest
@@ -34,8 +55,6 @@ jobs:
       # Step 1: Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       # Step 2: List all changed files
       - name: List all changed files
@@ -44,7 +63,7 @@ jobs:
           echo "Changed files:"
           echo "$FILES_JSON" | jq -r '.[]'
 
-      # Step 3: Find, build, and test changed projects
+      # Step 3: Find and build changed projects
       - name: Find, build, and test changed projects
         if: needs.prep.outputs.files != '[]'
         run: |
@@ -72,8 +91,28 @@ jobs:
               echo "Restoring dependencies for project: $PROJECT"
               dotnet restore "$PROJECT"
               echo "Building project: $PROJECT"
-              dotnet build "$PROJECT"
-              echo "Running tests for project: $PROJECT"
-              dotnet test "$PROJECT"
+              dotnet build "$PROJECT" /warnaserror:none
             done
+          fi
+
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Step 2: Echo changed directory statuses
+      - name: Echo changed directory statuses
+        run: |
+          if [ "${{ needs.prep.outputs.portal_changed }}" == "true" ]; then
+            echo "Portal directory has changes."
+          fi
+          if [ "${{ needs.prep.outputs.resource_provisioner_changed }}" == "true" ]; then
+            echo "ResourceProvisioner directory has changes."
+          fi
+          if [ "${{ needs.prep.outputs.serverless_operations_changed }}" == "true" ]; then
+            echo "ServerlessOperations directory has changes."
           fi
