--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -107,12 +107,16 @@ jobs:
       # Step 2: Echo changed directory statuses
       - name: Echo changed directory statuses
         run: |
-          if [ '${{ needs.prep.outputs.portal_changed }}' == "true" ]; then
+          portal_changed="${{ needs.prep.outputs.portal_changed }}"
+          resource_provisioner_changed="${{ needs.prep.outputs.resource_provisioner_changed }}"
+          serverless_operations_changed="${{ needs.prep.outputs.serverless_operations_changed }}"
+
+          if [ "$portal_changed" = "true" ]; then
             echo "Portal directory has changes."
           fi
-          if [ '${{ needs.prep.outputs.resource_provisioner_changed }}' == "true" ]; then
+          if [ "$resource_provisioner_changed" = "true" ]; then
             echo "ResourceProvisioner directory has changes."
           fi
-          if [ '${{ needs.prep.outputs.serverless_operations_changed }}' == "true" ]; then
+          if [ "$serverless_operations_changed" = "true" ]; then
             echo "ServerlessOperations directory has changes."
           fi
