--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -107,9 +107,10 @@ jobs:
       # Step 2: Echo changed directory statuses
       - name: Echo changed directory statuses
         run: |
-          portal_changed="${{ needs.prep.outputs.portal_changed }}"
-          resource_provisioner_changed="${{ needs.prep.outputs.resource_provisioner_changed }}"
-          serverless_operations_changed="${{ needs.prep.outputs.serverless_operations_changed }}"
+
+          portal_changed='${{ needs.prep.outputs.portal_changed }}'
+          resource_provisioner_changed='${{ needs.prep.outputs.resource_provisioner_changed }}'
+          serverless_operations_changed='${{ needs.prep.outputs.serverless_operations_changed }}'
 
           if [ "$portal_changed" = "true" ]; then
             echo "Portal directory has changes."
