--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -108,7 +108,7 @@ jobs:
       - name: Echo changed directory statuses
         run: |
 
-          portal_changed='${{ needs.prep.outputs.portal_changed }}'
+          portal_changed="${{ needs.prep.outputs.portal_changed }}"
           resource_provisioner_changed='${{ needs.prep.outputs.resource_provisioner_changed }}'
           serverless_operations_changed='${{ needs.prep.outputs.serverless_operations_changed }}'
 
