--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -97,7 +97,9 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: 
+      - prep
+      - build
 
     steps:
       # Step 1: Checkout the repository
