--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -63,7 +63,7 @@ jobs:
           echo "Changed files:"
           echo "$FILES_JSON" | jq -r '.[]'
 
-      # Step 3: Find, build, and test changed projects
+      # Step 3: Find and build changed projects
       - name: Find, build, and test changed projects
         if: needs.prep.outputs.files != '[]'
         run: |
@@ -101,7 +101,6 @@ jobs:
       - prep
       - build
       
-
     steps:
       # Step 1: Checkout the repository
       - name: Checkout repository
@@ -110,21 +109,16 @@ jobs:
       # Step 2: Echo changed directory statuses
       - name: Echo changed directory statuses
         run: |
-          FILES_JSON='${{ needs.prep.outputs.files }}'
-
           portal_changed="${{ needs.prep.outputs.portal_changed }}"
           resource_provisioner_changed='${{ needs.prep.outputs.resource_provisioner_changed }}'
           serverless_operations_changed='${{ needs.prep.outputs.serverless_operations_changed }}'
 
-          #if [ "$portal_changed" = "true" ]; then
+          if [ "$portal_changed" = "true" ]; then
             echo "Portal directory has changes."
-            echo $portal_changed
-            echo $FILES_JSON
-
-          #fi
-          #if [ "$resource_provisioner_changed" = "true" ]; then
-          #  echo "ResourceProvisioner directory has changes."
-          #fi
-          #if [ "$serverless_operations_changed" = "true" ]; then
-          #  echo "ServerlessOperations directory has changes."
-          #fi
+          fi
+          if [ "$resource_provisioner_changed" = "true" ]; then
+            echo "ResourceProvisioner directory has changes."
+          fi
+          if [ "$serverless_operations_changed" = "true" ]; then
+            echo "ServerlessOperations directory has changes."
+          fi
