--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -69,6 +69,7 @@ jobs:
         run: |
           FILES_JSON='${{ needs.prep.outputs.files }}'
           PROJECTS_TO_BUILD=()
+
           # Check if any files in the specified directories have changed
           for FILE in $(echo "$FILES_JSON" | jq -r '.[]'); do
             if [[ "$FILE" =~ ^(Portal|ResourceProvisioner|ServerlessOperations)/src/([^/]+)/.* ]]; then
@@ -79,6 +80,10 @@ jobs:
               fi
             fi
           done
+
+          # Deduplicate the projects by sorting and using uniq
+          PROJECTS_TO_BUILD=($(printf "%s\n" "${PROJECTS_TO_BUILD[@]}" | sort -u))
+
           if [ ${#PROJECTS_TO_BUILD[@]} -eq 0 ]; then
             echo "No projects need to be built. Skipping build step."
             exit 0
@@ -94,6 +99,7 @@ jobs:
               dotnet build "$PROJECT" /warnaserror:none
             done
           fi
+
 
   test:
     runs-on: ubuntu-latest
@@ -114,11 +120,11 @@ jobs:
           serverless_operations_changed='${{ needs.prep.outputs.serverless_operations_changed }}'
 
           if [ "$portal_changed" = "true" ]; then
-            echo "Portal directory has changes."
+            echo "Portal components have changed."
           fi
           if [ "$resource_provisioner_changed" = "true" ]; then
-            echo "ResourceProvisioner directory has changes."
+            echo "ResourceProvisioner components have changed."
           fi
           if [ "$serverless_operations_changed" = "true" ]; then
-            echo "ServerlessOperations directory has changes."
+            echo "ServerlessOperations components have changed."
           fi
